2.8.0

Added stats on lvl up! These stats are now much more important as gear has requirements for them.

Added armor types! Cloth, Leather, Plate! 

* cloth needs int, wis, leather needs dex, sta, plate needs vit str
* normal items randomly get either 1 stat as requirement, or both at half the value
* unique items have unique requirements :thonK: 
* higher gear rarities have higher stat requirements
* to reset your allocated stat points you need alchemy to craft a regret potion
* at early lvls requirements will be 0 but at lvl 10 or so they will slowly start and increase till max lvl.
* core stats (vit, dex etc) will become much more important in gearing and you should probably focus on getting those on your gear to fulfil the requirements

All old items will be plate. Still not sure what to do as their ID is "chest" instead of "plate_chest", might fix it with a breaking change when an expansion happens or 1.15 port.

trimmed down unique stats a bit. Less stats, stronger stats
some perf improvements
weapon tooltips are now less informative by default, but shift shows all the previously available info
gear tooltips now remove empty lines if there's more than 33 lines.
gear no longer break, they remain at 1 durability (but i cant assure you that so try not to keep them at 1 dura)
gears now don't add stats if they have only 1 or 2 durability. This is a fix for mods that prevent items from being broken and keep them at 1 durability.
They should be now useless as they are supposed to.
added on stat calculation event. You can use this to add stats from your own sources, or remove them lol
added collect gear event. This should allow a bit more addon support. 
core stats like dexterity now scale a lot slower. (code rewrite, bugs possible)
fixed player base stats scale value applying to lvl 1 value
sped up modify station a bit