@@ -22,6 +22,7 @@ import com.robertx22.mine_and_slash.uncommon.datasaving.Load;
 import com.robertx22.mine_and_slash.uncommon.stat_calculation.CommonStatUtils;
 import com.robertx22.mine_and_slash.uncommon.stat_calculation.MobStatUtils;
 import com.robertx22.mine_and_slash.uncommon.stat_calculation.PlayerStatUtils;
+import com.robertx22.mine_and_slash.uncommon.testing.Watch;
 import com.robertx22.mine_and_slash.uncommon.utilityclasses.RandomUtils;
 import com.robertx22.mine_and_slash.uncommon.utilityclasses.StatUtils;
 import com.robertx22.mine_and_slash.uncommon.utilityclasses.WorldUtils;
@@ -406,6 +407,12 @@ public class Unit {
         MinecraftForge.EVENT_BUS.post(new MineAndSlashEvents.OnStatCalculation(entity, data));
 
         CalcStats(data);
+
+        Watch watch = new Watch();
+        if (entity instanceof PlayerEntity) {
+            PlayerStatUtils.applyRequirementsUnmetPenalty(entity, data, gears);
+        }
+        watch.print("penalty");
 
         DirtyCheck newcheck = getDirtyCheck();
 
